# flash-deals

./: Makefile  README.md  TODO.md  docker-compose.monitoring.yml  docker-compose.yml
api-spec/: auth-service.v1.yaml  order-service.v1.yaml  product-service.v1.yaml
api/proto/: product.proto
docs/: architecture.md
docs/scenarios/: TEMPLATE.md  auth-cpu-bottleneck.md  concurrent-order-oversell.md  connection-pool-exhausted.md  deal-lock-contention.md  deal-order-latency.md  deal-server-overload.md  deal-traffic-spike.md  fifo-ordering.md  gateway-throughput-limit.md  multi-server-fifo.md  order-list-slow.md  order-tps-limit.md  product-insert-slow.md  product-list-slow.md  service-cascade-failure.md  stock-lock-contention.md
infra/app/gateway/: kong.yml
infra/app/postgres/: init.sql
infra/monitoring/otel/: otel-collector-config.yaml
infra/monitoring/prometheus/: prometheus.yml
infra/monitoring/tempo/: tempo.yaml
references/: Plan.md  Structure.md
services/auth/db/: query.sql  schema.sql
services/auth/python/: .env.example  Dockerfile  pyproject.toml
services/gateway/python/: .env.example  Dockerfile  pyproject.toml
services/order/: sqlc.yaml
services/order/db/: query.sql  schema.sql
services/product/: sqlc.yaml
services/product/python/: Dockerfile  pyproject.toml
services/product/python/src/: config.py  database.py  grpc_server.py  main.py  run.py  schemas.py  service.py  telemetry.py
services/product/python/src/repository/: __init__.py  base.py  cached.py  rdb.py
tests/integration/: .env.example  pyproject.toml
(+84 files in other folders)
